--- a/packages/matchstick/.github/workflows/release-macos-intel.yml
+++ b/packages/matchstick/.github/workflows/release-macos-intel.yml
@@ -35,7 +35,11 @@ jobs:
       - run: brew install protobuf
 
       - name: Build
-        run: cargo build --release && mv target/release/${{ matrix.artifact_name }} target/release/${{ matrix.asset_name }}
+        run:
+          cargo build --release && mv target/release/${{ matrix.artifact_name }} target/release/${{
+          matrix.asset_name }}
 
       - name: Upload binaries to release
-        run: echo ${{ secrets.GITHUB_TOKEN }} | gh auth login --with-token && gh release upload ${GITHUB_REF##*/} target/release/${{ matrix.asset_name }}
+        run:
+          echo ${{ secrets.GITHUB_TOKEN }} | gh auth login --with-token && gh release upload
+          ${GITHUB_REF##*/} target/release/${{ matrix.asset_name }}
