--- a/packages/matchstick/mocks/yamls/subgraph_invalid.yaml
+++ b/packages/matchstick/mocks/yamls/subgraph_invalid.yaml
@@ -1,3 +1,4 @@
+# eslint-disable 
 specVersion: 0.0.2
 description: Demo Subgraph showcasing unit testing with Matchstick!
 repository: https://github.com/LimeChain/demo-subgraph
