chore: ignore eslint

--- a/.eslintignore
+++ b/.eslintignore
@@ -3,8 +3,8 @@ dist
 build
 generated
 packages/cli/tests/cli/init
-packages/cli/tests/cli/validation
-packages/matchstick/mocks/yamls/**
+packages/cli/tests/cli/validation/
+packages/matchstick/mocks/**/*
 
 # TODO: cleanup examples and lint
 examples
