--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -121,6 +121,7 @@ jobs:
   publish-napi-bindings:
     name: Publish
     runs-on: ubuntu-latest
+    needs: build-matchstick-bindings
     steps:
       - uses: actions/checkout@v4
       - name: Setup node
