--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,41 +22,43 @@ env:
   MACOSX_DEPLOYMENT_TARGET: '10.13'
 jobs:
   # Matchstick
-  build-matchstick-bindings:
+  build:
     strategy:
       fail-fast: false
       matrix:
         settings:
           - host: macos-latest
             target: x86_64-apple-darwin
-            build: pnpm build --target x86_64-apple-darwin
-          - host: windows-latest
-            build: pnpm build --target x86_64-pc-windows-msvc
-            target: x86_64-pc-windows-msvc
+            build: |
+              yarn build
+              strip -x *.node
           - host: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-debian
-            build: pnpm build --target x86_64-unknown-linux-gnu
-          - host: macos-latest
+            build: |-
+              set -e &&
+              yarn build --target x86_64-unknown-linux-gnu &&
+              strip *.node
+          - host: macos-latest-xlarge
             target: aarch64-apple-darwin
-            build: pnpm build --target aarch64-apple-darwin
-    name: stable - ${{ matrix.settings.target }} - node@20
+            build: |
+              yarn build --target aarch64-apple-darwin
+              strip -x *.node
+    name: stable - ${{ matrix.settings.target }} - node@18
     runs-on: ${{ matrix.settings.host }}
     defaults:
       run:
         working-directory: packages/matchstick
     steps:
       - uses: actions/checkout@v4
-      - name: setup pnpm
-        uses: pnpm/action-setup@v4
         with:
-          version: 9.0.6
+          fetch-depth: 0
+
       - name: Setup node
         uses: actions/setup-node@v4
         if: ${{ !matrix.settings.docker }}
         with:
-          node-version: 20
-          cache: pnpm
+          node-version: 18
       - name: Install
         uses: dtolnay/rust-toolchain@stable
         if: ${{ !matrix.settings.docker }}
@@ -73,41 +75,16 @@ jobs:
             .cargo-cache
             target/
           key: ${{ matrix.settings.target }}-cargo-${{ matrix.settings.host }}
-      - name: Install Protobuf Compiler on macOS
-        if: matrix.settings.host == 'macos-latest'
-        run: brew install protobuf
-      - name: Install Protobuf Compiler on Ubuntu
-        if: matrix.settings.host == 'ubuntu-latest'
-        run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
-      - name: Install Protobuf Compiler on Windows
-        if: matrix.settings.host == 'windows-latest'
-        run: |
-          choco install protoc
-          refreshenv
       - uses: goto-bus-stop/setup-zig@v2
-        if:
-          ${{ matrix.settings.target == 'armv7-unknown-linux-gnueabihf' || matrix.settings.target ==
-          'armv7-unknown-linux-musleabihf' }}
+        if: ${{ matrix.settings.target == 'armv7-unknown-linux-gnueabihf' }}
         with:
           version: 0.11.0
       - name: Setup toolchain
         run: ${{ matrix.settings.setup }}
         if: ${{ matrix.settings.setup }}
         shell: bash
-      - name: Setup node x86
-        if: matrix.settings.target == 'i686-pc-windows-msvc'
-        run: pnpm config set supportedArchitectures.cpu "ia32"
-        shell: bash
       - name: Install dependencies
-        working-directory: packages/matchstick
-        run: pnpm install
-      - name: Setup node x86
-        uses: actions/setup-node@v4
-        if: matrix.settings.target == 'i686-pc-windows-msvc'
-        with:
-          node-version: 20
-          cache: pnpm
-          architecture: x86
+        run: yarn install
       - name: Build in docker
         uses: addnab/docker-run-action@v3
         if: ${{ matrix.settings.docker }}
@@ -117,58 +94,75 @@ jobs:
             '--user 0:0 -v ${{ github.workspace }}/.cargo-cache/git/db:/usr/local/cargo/git/db -v
             ${{ github.workspace }}/.cargo/registry/cache:/usr/local/cargo/registry/cache -v ${{
             github.workspace }}/.cargo/registry/index:/usr/local/cargo/registry/index -v ${{
-            github.workspace }}:/build -w /build -w /build/packages/matchstick'
+            github.workspace }}:/build -w /build/packages/matchstick'
           run: ${{ matrix.settings.build }}
       - name: Build
         run: ${{ matrix.settings.build }}
         if: ${{ !matrix.settings.docker }}
         shell: bash
       - name: Upload artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: bindings-${{ matrix.settings.target }}
-          path: ${{ env.APP_NAME }}.*.node
+          path: packages/matchstick/${{ env.APP_NAME }}.*.node
           if-no-files-found: error
-  publish-napi-bindings:
-    name: Publish
+
+  publish:
+    name: publish to npm
     runs-on: ubuntu-latest
-    needs: build-matchstick-bindings
+    needs:
+      - build
     steps:
       - uses: actions/checkout@v4
-      - name: Setup node
+      - name: setup node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: pnpm
-      - name: Install dependencies
+          node-version: 18
+
+      - name: install dependencies (lib)
+        run: yarn install
         working-directory: packages/matchstick
-        run: pnpm install
+
+      - name: install dependencies (bin)
+        run: yarn install
+        working-directory: bin/npm
+
       - name: Download all artifacts
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v3
         with:
-          path: artifacts
+          path: packages/matchstick/artifacts
+
       - name: Move artifacts
+        run: yarn artifacts
         working-directory: packages/matchstick
-        run: pnpm artifacts
+
       - name: List packages
-        working-directory: packages/matchstick
         run: ls -R ./npm
         shell: bash
-      - name: Publish
+        working-directory: packages/matchstick
+
+      - name: Update version to match release tag and commit
+        run: |
+          TAG_NAME=${GITHUB_REF#refs/tags/}
+          cd packages/matchstick
+          npm version $TAG_NAME --no-git-tag-version
+          cd ../../
+          cd bin/npm
+          npm version $TAG_NAME --no-git-tag-version
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add .
+          git commit -m "ci: bump napi packages' versions to $TAG_NAME"
+        env:
+          GITHUB_REF: ${{ github.ref }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: publish lib
         working-directory: packages/matchstick
         run: |
           npm config set provenance true
-          if git log -1 --pretty=%B | grep "^[0-9]\+\.[0-9]\+\.[0-9]\+$";
-          then
-            echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-            npm publish --access public
-          elif git log -1 --pretty=%B | grep "^[0-9]\+\.[0-9]\+\.[0-9]\+";
-          then
-            echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-            npm publish --tag next --access public
-          else
-            echo "Not a release, skipping publish"
-          fi
+          echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+          npm publish --access public
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
