--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,6 +49,9 @@ jobs:
               export OPENSSL_LIB_DIR=/usr/lib &&
               export PKG_CONFIG_PATH=/usr/lib/pkgconfig &&
               export PROTOC=/usr/bin/protoc &&
+              echo "Checking OpenSSL headers..." &&
+              ls -l /usr/include/openssl/ &&
+              echo "Building project..." &&
               pnpm build --target x86_64-unknown-linux-gnu &&
               strip *.node
     name: stable - ${{ matrix.settings.target }} - node@18
@@ -146,6 +149,9 @@ jobs:
             export OPENSSL_LIB_DIR=/usr/lib
             export PKG_CONFIG_PATH=/usr/lib/pkgconfig
             export PROTOC=/usr/bin/protoc
+            echo "Checking OpenSSL headers..." &&
+            ls -l /usr/include/openssl/ &&
+            echo "Building project..." &&
             ${{ matrix.settings.build }}
 
       - name: Build
@@ -159,6 +165,7 @@ jobs:
           name: bindings-${{ matrix.settings.target }}
           path: packages/matchstick/${{ env.APP_NAME }}.*.node
           if-no-files-found: error
+
   publish:
     name: publish to npm
     runs-on: ubuntu-latest
