--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,8 +49,8 @@ jobs:
               export OPENSSL_LIB_DIR=/usr/lib &&
               export PKG_CONFIG_PATH=/usr/lib/pkgconfig &&
               export PROTOC=/usr/bin/protoc &&
-              echo "Checking OpenSSL headers..." &&
-              ls -l /usr/include/openssl/ &&
+              echo "Checking OpenSSL headers in $OPENSSL_INCLUDE_DIR/openssl" &&
+              ls -l $OPENSSL_INCLUDE_DIR/openssl &&
               echo "Building project..." &&
               pnpm build --target x86_64-unknown-linux-gnu &&
               strip *.node
@@ -149,8 +149,8 @@ jobs:
             export OPENSSL_LIB_DIR=/usr/lib
             export PKG_CONFIG_PATH=/usr/lib/pkgconfig
             export PROTOC=/usr/bin/protoc
-            echo "Checking OpenSSL headers..." &&
-            ls -l /usr/include/openssl/ &&
+            echo "Checking OpenSSL headers in $OPENSSL_INCLUDE_DIR/openssl" &&
+            ls -l $OPENSSL_INCLUDE_DIR/openssl &&
             echo "Building project..." &&
             ${{ matrix.settings.build }}
 
@@ -165,7 +165,6 @@ jobs:
           name: bindings-${{ matrix.settings.target }}
           path: packages/matchstick/${{ env.APP_NAME }}.*.node
           if-no-files-found: error
-
   publish:
     name: publish to npm
     runs-on: ubuntu-latest
