--- a/packages/matchstick/package.json
+++ b/packages/matchstick/package.json
@@ -17,8 +17,8 @@
     "version": "napi version"
   },
   "devDependencies": {
-    "@napi-rs/cli": "^2.18.3",
-    "ava": "^6.0.1"
+    "@napi-rs/cli": "3.0.0-alpha.59",
+    "ava": "^6.1.3"
   },
   "ava": {
     "timeout": "3m"
