--- a/packages/matchstick/package.json
+++ b/packages/matchstick/package.json
@@ -25,10 +25,12 @@
   },
   "napi": {
     "name": "graph-matchstick",
-    "triples": {
-      "additional": [
-        "aarch64-apple-darwin"
-      ]
-    }
-  }
+        "targets": [
+      "x86_64-apple-darwin",
+      "aarch64-apple-darwin",
+      "x86_64-unknown-linux-gnu",
+      "x86_64-pc-windows-msvc"
+    ]
+  },
+  "packageManager": "pnpm@9.5.0"
 }
