--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,6 +52,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: setup pnpm
         uses: pnpm/action-setup@v4
+        with:
+          version: 9.5.0
       - name: Setup node
         uses: actions/setup-node@v4
         with:
